getting a checked box option

--- a/basicpractice/public/index.html
+++ b/basicpractice/public/index.html
@@ -15,11 +15,14 @@
 
     <script type="text/babel">
 
-      var Bacon = React.createClass({
-        render: function() {
-          return (<h1>Hello, my name is Handrew!</h1>);
-        }
-      });
+let checkBox = React.createClass({
+  getInitialState: function() {
+    return {checked: true};
+  },
+  render: function() {
+    
+  }
+})
 
       ReactDOM.render(<Bacon />, document.getElementById('root'));
 
